# libfbi

./: CMakeLists.txt  INSTALL.txt  LIBFBIConfig.cmake.in  LIBFBIUse.cmake.in  LICENSE.txt  README.txt  SOURCE_PREAMBLE  index.html  style.css
cmake/: testarray.cxx  testkdtree.cxx  testrandom.cxx  testtemplatealiases.cxx  testvariadic.cxx
cmake/macros/: copy_files.cmake  require_out_of_src_build.cmake
cmake/modules/: TestForCppNamespaces.cmake  TestForCppNamespaces.cpp
cmake/scripts/: coverage.sh.in  unit_coverage.sh.in
doc/: 00_BasicConcept.h  Doxyfile.cmake  Example01_SimpleExample.h  Example03_XicConstructionExample.h  Example04_Ms1Ms2MatchingExample.h  Mainpage.h  SoccerExample.h  doxygen.css
doc/html/: 00___basic_concept_8h_source.html  _advanced_example.html  _example01___simple_example_8h_source.html  _example02___soccer_example_8h_source.html  _example03___xic_construction_example_8h_source.html  _example04___ms1_ms2_matching_example_8h_source.html  _mainpage_8h_source.html  _ms1_ms2_matching_example.html  _ms1_ms2_matching_example_8h_source.html  _simple_example.html  _simple_example_8h_source.html  _soccer_example_8h_source.html  _xic_construction_example.html  _xic_construction_example_8h_source.html  advancedexample.html  annotated.html  basic_concept.html  class_pack_impl.html  classes.html  classfbi_1_1_set_a-members.html  classfbi_1_1_set_a.html  classfbi_1_1_set_a_1_1_hybrid_scanner-members.html  classfbi_1_1_set_a_1_1_intersection_tester-members.html  classfbi_1_1_set_a_1_1_key_creator-members.html  classfbi_1_1_set_a_1_1_key_printer-members.html  classfbi_1_1_set_a_1_1_one_way_scanner-members.html  classfbi_1_1_set_a_1_1_set_b-members.html  classfbi_1_1_set_a_1_1_state-members.html  classfbi_1_1_set_a_1_1_state.html  classfbi_1_1_set_a_1_1_state__coll__graph.map  classfbi_1_1_set_a_1_1_state__coll__graph.md5  classfbi_1_1_set_a_1_1less_head-members.html  classfbi_1_1_set_a_1_1less_tail-members.html  classfbi_1_1_set_a_a5005221a90683b2fdc5e9acd72c89826_cgraph.map  classfbi_1_1_set_a_a5005221a90683b2fdc5e9acd72c89826_cgraph.md5  classfbi_1_1_set_a_a76bd9bc51f6157f6a5383d08c597916e_cgraph.map  classfbi_1_1_set_a_a76bd9bc51f6157f6a5383d08c597916e_cgraph.md5  classfbi_1_1_traits-members.html  classfbi_1_1mpl_1_1_traits_generator-members.html  connectedcomponents_8h_source.html  (+77 more)
doc/html/search/: all_5f.html  all_5f.js  all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_68.html  all_68.js  all_69.html  all_69.js  all_6a.js  all_6b.html  all_6b.js  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6e.html  all_6e.js  all_6f.html  all_6f.js  all_70.html  all_70.js  all_71.html  all_71.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  (+298 more)
examples/: .example-isotope-patterns.h.swp  .example-ms2-ms1-matching.cpp.swp  .kdtree-xic-construction.cpp.swp  .soccer-example.cpp.swp  CMakeLists.txt  centroid.h  example-bruker.cpp  example-isotope-patterns.cpp  example-isotope-patterns.h  example-ms2-ms1-matching.cpp  example-xic-construction-opts.h  example-xic-construction.cpp  example-xic-construction.h  kdtree-xic-construction.cpp  peptides.txt  simple-example.cpp  soccer-example.cpp  splitter.h  xic.h  xics.txt
examples/data/: ms2precursors.txt  xics.txt
examples/include/: CMakeLists.txt  libssrckdtree-config.h.cmake  libssrckdtree-packages.h
examples/include/spatial/: kd_tree.h  rectangle_region.h
examples/include/spatial/detail/: kd_tree_node.h  kd_tree_range_search_iterator.h
examples/include/ssrc/: libssrckdtree-config.h.cmake  libssrckdtree-packages.h
examples/include/ssrc/spatial/: kd_tree.h  rectangle_region.h
examples/include/ssrc/spatial/detail/: kd_tree_range_search_iterator.h
htdocs/: index.html
include/fbi/: config.h.cmake  connectedcomponents.h  fbi.h  fbi.v.h  traits.h  traits.v.h  tuple.h.cmake  tuplegenerator.h
include/fbi/boost/: connectedcomponents.h  fbi.h  traits.h  tuplegenerator.h
include/fbi/variadic/: fbi.h  traits.h  tuplegenerator.h
scripts/: cwd.sh  sync-docs-gh-pages.sh
test/: CMakeLists.txt  TEMPLATE  create_test.py  fbi-test.cpp  fbi-test_b.cpp  fbi-test_v.cpp  memtest.py
test/include/: unittest.hxx
test/scripts/: benchmark.sh.cmake  plotting.r.cmake  setupbenchmark.sh.cmake
